Set explicit font-size on <body>  to prevent small fonts in IE
Respond.js does some magic to add a media query polyfill, and by doing so
it sets the font-size of <body> to 100%. This will result in way too small
fonts on the page. Setting an inline style to match our css (15px) will
instruct respond.js to return that value after it's magic is done.

--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -80,7 +80,7 @@
         <![endif]-->
     </head>
 
-    <body class="page [% page %]" data-page="[% page %]">
+    <body class="page [% page %]" data-page="[% page %]" style="font-size:15px">
         <header role="banner" class="container">
         [% IF header AND NOT page_as_mech %]
             <p class="text-center">[% header %]</p>
