Add placeholder to select widget's search input

--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1175,6 +1175,16 @@ small.search_term {
     }
 }
 
+.select-widget .form-control-search::-moz-placeholder {
+    font-style: italic;
+}
+.select-widget .form-control-search:-ms-input-placeholder {
+    font-style: italic;
+}
+.select-widget .form-control-search::-webkit-input-placeholder {
+    font-style: italic;
+}
+
 .select-widget .label {
   font-size: 1em;
   font-weight: bold;
