--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1791,6 +1791,15 @@ small.search_term {
   .select-widget .form-control-search::-ms-clear {
     display: none; }
 
+.select-widget .form-control-search::-moz-placeholder {
+  font-style: italic; }
+
+.select-widget .form-control-search:-ms-input-placeholder {
+  font-style: italic; }
+
+.select-widget .form-control-search::-webkit-input-placeholder {
+  font-style: italic; }
+
 .select-widget .label {
   font-size: 1em;
   font-weight: bold;
