Add proper focus indicator to checkboxes in select widgets

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1940,6 +1940,8 @@ small.search_term {
 
 .select-widget .available .answer [type="checkbox"] {
   margin-right: .3em; }
+  .select-widget .available .answer [type="checkbox"]:focus + span {
+    border: 1px solid #336699; }
 
 .select-widget .available .answer .details {
   display: none;
