--- a/sass/_branding-colours.scss
+++ b/sass/_branding-colours.scss
@@ -2,6 +2,8 @@ $primary-navy: #1460aa;
 
 $heading-blue: #7276ad;
 
+$button-border-blue: #85bffd;
+
 $rag-undefined  : rgb(160, 159, 160); // aluminium
 $rag-danger     : rgb(185, 74, 72);
 $rag-warning    : rgb(192, 152, 99);
