--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -74,6 +74,16 @@
     [% END %]
 [% END %]
 
+[% MACRO render_enum_datum(data, header, full_content) BLOCK %]
+    [% IF full_content != 'full' && data.value.length > MORE_LESS_TRESHOLD %]
+        [% WRAPPER more_less_block %]
+            [% data.value | html %]
+        [% END %]
+    [% ELSE %]
+        [% data.value | html %]
+    [% END %]
+[% END %]
+
 [% PROCESS snippets/rag_symbols.tt %]
 
 [% MACRO render_rag_datum(rag) BLOCK %]
@@ -91,6 +101,10 @@
             render_person_datum(datum.data);
         CASE 'string';
             render_string_datum(datum.data, datum.name, full_content);
+        CASE 'enum';
+            render_enum_datum(datum.data, datum.name, full_content);
+        CASE 'tree';
+            render_enum_datum(datum.data, datum.name, full_content);
         CASE 'rag';
             render_rag_datum(datum.data);
         CASE;
