Remove surplus height from more-less box

--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1120,7 +1120,7 @@ small.search_term {
 /* less / more */
 
 .more-less.clipped {
-    height: 60px;
+    max-height: 60px;
     overflow: hidden;
 }
 
