--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1415,7 +1415,7 @@ small.search_term {
 
 /* less / more */
 .more-less.clipped {
-  height: 60px;
+  max-height: 60px;
   overflow: hidden; }
 
 .more-less.transparent {
