--- a/views/config.tt
+++ b/views/config.tt
@@ -21,9 +21,14 @@
             </div>
             <p></p>
             <p class="lead">
-                Customise the homepage your users see when they login. Each table has its own
+                Customise the homepage your users see for this table. Each table has its own
                 homepage. You can use the homepage to give instructions, set out guidelines or create
                 quick links to relevant views or actions.
+            </p>
+            <p class="lead">
+                If table homepages (such as this one) are not defined, then
+                only the main homepage as defined in system-wide settings will
+                be shown to users.
             </p>
             <div class="form-group">
                 <label for="homepage_text">Left-hand (top) content block:</label>
@@ -48,78 +53,4 @@
         </form>
     </div>
 </div>
-
-<script type="text/javascript">
-    var jscode='[% FILTER remove('\n+') %]
-        [% FILTER replace('\'', '\\\'') %]
-            [% IF 0 %]
-                tinymce.init({
-                    selector: "textarea",
-                    width : "800",
-                    height : "400",
-                    plugins : "table",
-                    theme_advanced_buttons1 : "bold, italic, underline, strikethrough, justifyleft, justifycenter, justifyright, bullist, numlist, outdent, indent, undo, redo, link, unlink, removeformat, cleanup, hr, formatselect, forecolor, backcolor",
-                    theme_advanced_buttons2 : "tablecontrols",
-                    theme_advanced_buttons3 : ""
-                });
-            [% ELSE %]
-                $(document).ready(function() {
-                    $('.summernote').summernote({
-                        height: 400,
-                        callbacks: {
-                            onImageUpload: function(files) {
-                                for(var i = 0; i < files.length; i++) {
-                                    upload_file(files[i], this);
-                                }
-                            }
-                        }
-                    });
-                    $('#homepage_text_sn').summernote('code', $('#homepage_text').val());
-                    $('#homepage_text2_sn').summernote('code', $('#homepage_text2').val());
-                });
-                $('#update').click(function(){
-                    if ($('#homepage_text_sn').summernote('isEmpty')) {
-                        var content = '';
-                    } else {
-                        var content = $('#homepage_text_sn').summernote('code');
-                    }
-                    $('#homepage_text').val(content);
-                    if ($('#homepage_text2_sn').summernote('isEmpty')) {
-                        content = '';
-                    } else {
-                        content = $('#homepage_text2_sn').summernote('code');
-                    }
-                    $('#homepage_text2').val(content);
-                });
-                function upload_file(file, el) {
-                    if(file.type.includes('image')) {
-                        var data = new FormData();
-                        data.append('file', file);
-                        $.ajax({
-                            url: '/file?ajax',
-                            type: 'POST',
-                            contentType: false,
-                            cache: false,
-                            processData: false,
-                            dataType: 'JSON',
-                            data: data,
-                            success: function (response) {
-                                if(response.is_ok) {
-                                    $(el).summernote('editor.insertImage', response.url);
-                                } else {
-                                    console.log(response.error);
-                                }
-                            }
-                        })
-                        .fail(function(e) {
-                            console.log(e);
-                        });
-                } else {
-                    console.log("The type of file uploaded was not an image");
-                }
-        }
-            [% END %]
-        [% END %]
-    [% END %]';
-</script>
 
