--- a/views/data.tt
+++ b/views/data.tt
@@ -143,7 +143,7 @@
                     </div>
                 [% ELSIF viewtype == "graph" %]
                     <div class="btn-group">
-                        <a href="[% url.page %]/account/graph/" class="btn btn-default" role="button">Select graphs...</a>
+                        <a href="[% url.page %]/[% layout.identifier %]/mygraphs/" class="btn btn-default" role="button">Select graphs...</a>
                     </div>
                 [% END %]
             </div>
