--- a/views/graphs.tt
+++ b/views/graphs.tt
@@ -3,7 +3,7 @@
 administrator, and will be displayed (by default) to all users. Users can individually
 de-select graphs that they do not wish to be displayed.</p>
 <p>
-    <a href="/graph/0" class="btn btn-default" role="button">Create new graph</a>
+    <a href="/[% layout.identifier %]/graph/0" class="btn btn-default" role="button">Create new graph</a>
 </p>
 <table class="table table-striped">
     <tr>
