--- a/views/edit.tt
+++ b/views/edit.tt
@@ -900,16 +900,18 @@
                     <i class="fa fa-spinner fa-spin" style="font-size:24px"></i>
                 </li>
                 <li class="has-noresults" hidden>No results</li>
-                <li class="answer answer--blank">
-                    <span class="control">
-                        [% checked = !editvalue.id %]
-                        [% value_id = field _ '__blank' %]
-                        <label id="blank_label" for="[% value_id %]">
-                            <input id="[% value_id %]" type="radio" name="[% field %]" [% checked && 'checked' %] value="" class="visually-hidden">
-                            <span role="option">blank</span>
-                        </label>
-                    </span>
-                </li>
+                [% IF NOT required %]
+                    <li class="answer answer--blank">
+                        <span class="control">
+                            [% checked = !editvalue.id %]
+                            [% value_id = field _ '__blank' %]
+                            <label id="blank_label" for="[% value_id %]">
+                                <input id="[% value_id %]" type="radio" name="[% field %]" [% checked && 'checked' %] value="" class="visually-hidden">
+                                <span role="option">blank</span>
+                            </label>
+                        </span>
+                    </li>
+                [% END %]
             [% FOREACH value IN values %]
                 [% NEXT IF value.deleted %]
                 [% checked = editvalue.id_hash.${value.id} %]
