--- a/views/edit.tt
+++ b/views/edit.tt
@@ -872,7 +872,7 @@
     <div class="select-widget [% IF readonly %]select-widget--read-only[% END %] single"
         [% IF column.has_subvals %]
             data-field="[% field %]"
-            data-filter-endpoint="[% "/api/field/values/" _ column.id %]"
+            data-filter-endpoint="/[% layout.identifier _ "/api/field/values/" _ column.id %]"
             data-filter-fields='[% column.data_filter_fields %]'
         [% END %]
         >
@@ -1000,7 +1000,7 @@
     <div class="select-widget [% IF readonly %]select-widget--read-only[% END %] multi"
         [% IF column.has_subvals %]
             data-field="[% field %]"
-            data-filter-endpoint="[% "/api/field/values/" _ column.id %]"
+            data-filter-endpoint="/[% layout.identifier %] _ "/api/field/values/" _ column.id %]"
             data-filter-fields='[% column.data_filter_fields %]'
         [% END %]
         >
